# Remix-Rust

./: .gitignore  Dockerfile  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/app/routes/: _index.tsx
