[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.0"
actix-web = "4.0.0"
actix-files = "0.6.0-beta.8"
warp = "0.3"
tokio = { version = "1", features = ["full"] }